@@ -1,3 +1,9 @@
+2007-02-02  Neil Jagdish Patel  <njp@Fedora>
+
+	reviewed by: <delete if not using a buddy>
+
+	* src/awn-window.c: Smooth out repositioning.
+
 2007-02-01  Neil Jagdish Patel  <njp@Fedora>
 
 	* README:
